fix: search bar not showing

--- a/pages/courseMain/courseMain.css
+++ b/pages/courseMain/courseMain.css
@@ -80,9 +80,9 @@
 	left: 0;
 	top:56px;
 	background-color: white;
-	height: calc(100% - 56px) !important;
+	height: calc(100vh - 56px) !important;
 	width: 100vw;
-	z-index:15;
+	z-index: 100;
 }
 
 .icon {
